--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -25,14 +25,15 @@
 
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+
+        <div  class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Logo</a>
+                <a class="navbar-brand" href="index.html">Logo</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -46,9 +47,10 @@
             </div>
         </div>
     </nav>
-    <h1>snkrGllry</h1>
+    <div id="caption">
+        <h1>snkrGllry</h1>
+    </div>
 </header>
-
 
 <section>
 
@@ -204,10 +206,134 @@
             </div>
             <div class="collapse navbar-collapse" id="filterNavbar">
                 <ul class="nav navbar-nav navbar-right">
+
+
+                    <li><!-- Trigger the modal with a button -->
+
+
+                        <a href="#" data-toggle="modal" data-target="#uploadModal">Upload</a>
+
+                        <!-- Modal -->
+                        <div id="uploadModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog modal-lg modal-sm">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Upload</h4>
+                                    </div>
+
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="brandSelect">Brand</label>
+                                                <select class="form-control" id="brandSelect">
+                                                    <option>Nike</option>
+                                                    <option>Adidas</option>
+                                                    <option>Puma</option>
+                                                    <option>Asics</option>
+                                                    <option>Reebok</option>
+                                                    <option>Saucony</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="colorSelect">Color</label>
+                                                <select class="form-control" id="colorSelect">
+                                                    <option>Black</option>
+                                                    <option>White</option>
+                                                    <option>Red</option>
+                                                    <option>Yellow</option>
+                                                    <option>Orange</option>
+                                                    <option>Brown</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="styleSelect">Style</label>
+                                                <select class="form-control" id="styleSelect">
+                                                    <option>Running</option>
+                                                    <option>Basketball</option>
+                                                    <option>Tennis</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="materialSelect">Style</label>
+                                                <select class="form-control" id="materialSelect">
+                                                    <option>Running</option>
+                                                    <option>Basketball</option>
+                                                    <option>Tennis</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="shapeSelect">Style</label>
+                                                <select class="form-control" id="shapeSelect">
+                                                    <option>this</option>
+                                                    <option>that</option>
+                                                    <option>Other</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="yearSelect">Style</label>
+                                                <select class="form-control" id="yearSelect">
+                                                    <option>2016</option>
+                                                    <option>2015</option>
+                                                    <option>2014</option>
+                                                    <option>2013</option>
+                                                    <option>2012</option>
+                                                    <option>2014</option>
+                                                    <option>2014</option>
+
+
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="descriptionTextarea">Description</label>
+                                                <textarea class="form-control" id="descriptionTextarea"
+                                                          rows="3"></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputFile">File input</label>
+                                                <input type="file" class="form-control-file" id="exampleInputFile">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                                            </button>
+                                        </form>
+
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="#brand">Brand</a></li>
                     <li><a href="#model">Model</a></li>
                     <li><a href="#color">Color</a></li>
-                    <li><a href="#other">Other</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Date ascending</a></li>
+                            <li><a href="#">Date descending</a></li>
+                            <li><a href="#">Likes ascending</a></li>
+                            <li><a href="#">Likes descending</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Order By
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Date ascending</a></li>
+                            <li><a href="#">Date descending</a></li>
+                            <li><a href="#">Likes ascending</a></li>
+                            <li><a href="#">Likes descending</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -218,71 +344,135 @@
 <section>
     <div class="container">
 
-        <div class="row">
+        <div class="row rowBox" >
 
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a  href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
+
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+                </div>
             </div>
         </div>
     </div>
 </section>
+
 
 
 <section>
@@ -300,18 +490,22 @@
 </section>
 
 
-<footer>
+<footer class="footer-bottom">
 
-    <div class="navbar navbar-default nav-links">
-        <div class="container">
-            <ul class="nav navbar-nav">
+
+
+
+    <div class="navbar navbar-default nav-links navbar-static-bottom">
+        <div id="footer-bottom" class="container">
+            <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
-
 
             </ul>
         </div>
     </div>
+
+
 </footer>
 
 
