--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -27,7 +27,8 @@
 
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+
+        <div  class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -48,7 +49,9 @@
             </div>
         </div>
     </nav>
-    <h1>snkrGllry</h1>
+    <div id="caption">
+        <h1>snkrGllry</h1>
+    </div>
 </header>
 
 
@@ -110,18 +113,22 @@
 </section>
 
 
-<footer>
-    <!--navbar-fixed-bottom-->
+<footer class="footer-bottom">
 
-    <div class="navbar navbar-default nav-links">
-        <div class="container">
-            <ul class="nav navbar-nav">
+
+
+
+    <div class="navbar navbar-default nav-links navbar-static-bottom">
+        <div id="footer-bottom" class="container">
+            <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
 
             </ul>
         </div>
     </div>
+
+
 </footer>
 
 
